--- a/Pages/SignUp.cshtml
+++ b/Pages/SignUp.cshtml
@@ -69,7 +69,7 @@ button:hover {
 
 </style>
 
-<form  style="border:1px solid #ccc">
+<form  style="border:1px solid #ccc" method="Post">
   <div class="container">
     <h1>Sign Up</h1>
     <p>Please fill in this form to create an account.</p>
