--- a/Pages/SignUp.cshtml
+++ b/Pages/SignUp.cshtml
@@ -75,15 +75,26 @@ button:hover {
     <p>Please fill in this form to create an account.</p>
     <hr>
 
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
+    <label for="UserName"><b>User Name</b></label>
+    <input type="text" placeholder="Enter Username" name="UserName" required>
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <label for="Email"><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" name="Email" required>
+
+    <label for="Password"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="Password" required>
 
     <label for="psw-repeat"><b>Repeat Password</b></label>
     <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-    
+
+    <label for="Gender"><b>Address</b></label>
+    <input type="radio"  name="Gender" value="Male" required>Male
+    <input type="radio"  name="Gender" value="Female" required>Female
+    <input type="radio"  name="Gender" value="Other" required>Other
+
+    <label for="Address"><b>Address</b></label>
+    <input type="text" placeholder="Enter Address" name="Address" required>
+
     <label>
       <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
     </label>
