--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -63,15 +63,18 @@ span.psw {
 
   <div class="container">
     <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    <input type="text" placeholder="Enter Username" name="Email" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder="Enter Password" name="Password" required>
         
     <button type="submit">Login</button>
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
+  </div>
+  <div class="container">
+        @ViewData["msg"];
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
