--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -74,7 +74,7 @@ span.psw {
     </label>
   </div>
   <div class="container">
-        @ViewData["msg"];
+        @ViewData["msg"]
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
